--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
+  "builds": [
+    {
+      "src": "*.html",
+      "use": "@vercel/static"
+    }
+  ],
   "rewrites": [
     {
       "source": "/(.*)",
